stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_custom_config.snap
---
source: crates/stepflow-main/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=/var/folders/c4/dcr0mh3d183d5kh9gf89wsc00000gn/T/.tmpQWO0Fm/custom-config.yml"
---
success: true
exit_code: 0
----- stdout -----
Available Components:
====================

Component: /test-builtins/create_messages
  Description: Create a chat message list from system instructions and user prompt

Component: /test-builtins/eval
  Description: Execute a nested workflow with given input and return the result

Component: /test-builtins/get_blob
  Description: Retrieve JSON data from a blob using its ID

Component: /test-builtins/iterate
  Description: Iteratively apply a workflow until it returns a result instead of next

Component: /test-builtins/load_file
  Description: Load and parse a file (JSON, YAML, or text) from the filesystem

Component: /test-builtins/map
  Description: Apply a workflow to each item in a list and collect the results

Component: /test-builtins/openai
  Description: Send messages to OpenAI's chat completion API and get a response

Component: /test-builtins/put_blob
  Description: Store JSON data as a blob and return its content-addressable ID

Total components: 8

----- stderr -----
