stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_help.snap
---
source: crates/stepflow-main/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
List all available components from a stepflow config.

List all available components from the configured plugins.

# Examples

```bash

# List components in pretty format

stepflow list-components

# List components with JSON output including schemas

stepflow list-components --format=json

# List components from specific config without schemas

stepflow list-components --config=my-config.yml --format=yaml --schemas=false

# Show all components including unreachable ones

stepflow list-components --hide-unreachable=false

```

Usage: stepflow list-components [OPTIONS]

Options:
      --config <FILE>
          The path to the stepflow config file.
          
          If not specified, will look for `stepflow-config.yml` in the directory containing the workflow file. If that isn't found, will also look in the current directory.

      --log-level <LEVEL>
          Set the log level for StepFlow
          
          [default: info]
          [possible values: trace, debug, info, warn, error]

      --format <FORMAT>
          Output format for the component list
          
          [default: pretty]
          [possible values: pretty, json, yaml]

      --other-log-level <LEVEL>
          Set the log level for other parts of StepFlow
          
          [default: warn]
          [possible values: trace, debug, info, warn, error]

      --log-file <FILE>
          Write logs to a file instead of stderr

      --schemas <SCHEMAS>
          Include component schemas in output.
          
          Defaults to false for pretty format, true for json/yaml formats.
          
          [possible values: true, false]

      --hide-unreachable <HIDE_UNREACHABLE>
          Hide components that are not reachable through any routing rule.
          
          Use --no-hide-unreachable to show all components regardless of routing.
          
          [default: true]
          [possible values: true, false]

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
